data/all_generated_tests/raw_wast_tests/call_IncorrectConditionEvaluation_3523.wast
;; 2. **Test Description:** Invoke a `call` instruction where an argument has the incorrect type but matches in count against the function's parameters. Check if the condition evaluation in `wizard_engine` detects the type mismatch and `WebAssembly` improperly processes it. Specific Constraint:** Argument type and count checking.

(assert_invalid
  (module
    (func $incorrect-arg-type-call (call 1 (i32.const 1) (i64.const 1)))
    (func (param i32 i32))
  )
  "type mismatch"
)